<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="de.njsm.stocks.frontend.barcodes.BarcodeActivity">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/location_swipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <include layout="@layout/content_barcode" />

    </android.support.v4.widget.SwipeRefreshLayout>

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/ic_add_white_24dp"
            android:onClick="addBarcode"/>

</android.support.design.widget.CoordinatorLayout>
