<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.njsm.stocks.frontend.addfood.AddFoodItemActivity">

    <TextView
        android:id="@+id/activity_add_food_item_date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/text_eat_by_date"
        android:layout_alignParentTop="true"
        android:paddingBottom="@dimen/activity_horizontal_margin"/>

    <DatePicker
        android:id="@+id/activity_add_food_item_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/activity_add_food_item_date_text"
        android:layout_centerInParent="true"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"/>

    <Spinner
        android:id="@+id/activity_add_food_item_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/activity_add_food_item_date"
        android:layout_alignParentStart="true" />
</RelativeLayout>
