...
                      android:id="@+id/fragment_outline_scroll_view"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">

            <androidx.cardview.widget.CardView
                    android:id="@+id/fragment_outline_cardview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"

                    android:clickable="true"
                    android:focusable="true"
...
