...
    <string name="hint_username">User name</string>
    <string name="hint_device_name">Device name</string>
    <string name="hint_user_id">User ID</string>
    <string name="hint_device_id">Device ID</string>
    <string name="hint_fingerprint">Fingerprint</string>
    <string name="hint_ticket">Ticket</string>
    <string name="hint_location">Location</string>
    <string name="hint_food">Food name</string>
    <string name="hint_new_name">New name</string>
    <string name="search_hint">Search Food</string>
    <string name="hint_original">Original</string>
    <string name="hint_remote">Other Change</string>
    <string name="hint_local">Your Change</string>
    <string name="hint_name">Name</string>
...
    <string name="dialog_ticket_reject">Server rejected ticket</string>
    <string name="dialog_server_trouble">Server is in trouble. Contact your admin.</string>
    <string name="dialog_invalid_answer">Got invalid answer from server</string>
    <string name="dialog_cert_unreadable">Certificate is unreadable</string>
    <string name="dialog_retry">RETRY</string>
    <string name="dialog_abort">ABORT</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_remove">REMOVE</string>
    <string name="dialog_store_settings">Saving settings</string>
    <string name="dialog_new_device">Create new device</string>
    <string name="dialog_new_user">Create new user</string>
    <string name="dialog_new_location">Create new location</string>
    <string name="dialog_new_food">Create new food</string>
...
