<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/users"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/users" />
        <item
            android:id="@+id/locations"
            android:icon="@drawable/ic_account_balance_wallet_black_24dp"
            android:title="@string/locations" />

    </group>

    <group>
            <item
                android:id="@+id/settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/help"
                android:icon="@drawable/ic_help_black_24dp"
                android:title="@string/action_help" />
            <item
                android:id="@+id/info"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/action_info" />
    </group>

</menu>
