<?xml version="1.0" encoding="utf-8"?>
<!--
    stocks is client-server program to manage a household's food stock
    Copyright (C) 2019  The stocks developers

    This file is part of the stocks program suite.

    stocks is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    stocks is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see https://www.gnu.org/licenses/.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <include
                layout="@layout/date_conflict"
                android:id="@+id/fragment_food_item_form_date"/>

        <include
                layout="@layout/spinner_conflict"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/fragment_food_item_form_date"
                android:id="@+id/fragment_food_item_form_location"/>

        <include
                layout="@layout/spinner_conflict"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/fragment_food_item_form_location"
                android:id="@+id/fragment_food_item_form_unit"/>

        <com.google.android.material.divider.MaterialDivider
                android:layout_below="@id/fragment_food_item_form_unit"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:id="@+id/fragment_food_item_form_divider"/>

        <include layout="@layout/fragment_price_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/fragment_food_item_form_divider"
                android:id="@+id/fragment_food_item_form_price"/>

    </RelativeLayout>
</ScrollView>