<?xml version="1.0" encoding="utf-8"?>
<!--
    stocks is client-server program to manage a household's food stock
    Copyright (C) 2019  The stocks developers

    This file is part of the stocks program suite.

    stocks is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    stocks is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see https://www.gnu.org/licenses/.
-->


<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_check_and_continue_check"
        android:icon="@drawable/ic_check_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_save"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_check_and_continue"
        android:icon="@drawable/ic_done_all_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_save_and_continue"
        app:showAsAction="ifRoom" />
</menu>
